--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
     "@slidev/cli": "^51.4.0",
     "@slidev/theme-default": "^0.25.0",
     "vue": "^3.5.13"
-  }
+  },
+  "packageManager": "pnpm@10.6.4"
 }
