--- a/packages/20250727-demo-inn/package.json
+++ b/packages/20250727-demo-inn/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "@slidev/cli": "^0.48.0-beta.0",
-    "@slidev/theme-default": "^0.25.0"
+    "@slidev/theme-default": "^0.25.0",
+    "@vueuse/core": "^13.5.0"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.30"
-  },
-  "packageManager": "pnpm@10.6.4"
+  }
 }
